--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "Andrii Dieiev"
   ],
   "scripts": {
-    "start": "webpack-dev-server --port 3000 --hot --host 0.0.0.0"
-//    "start": "webpack-dev-server --port 3000 --hot --host 0.0.0.0"
+    "start:n": "webpack-dev-server --port 3000 --hot --host 0.0.0.0",
+    "start": "webpack-dev-server --open"
   },
   "dependencies": {
     "handlebars": "^4.0.11",
