--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "handlebars": "^4.0.11",
-    "handlebars-loader": "^1.7.0"
+    "handlebars-loader": "^1.7.0",
+    "highcharts": "^6.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
